# parallel-zip

./: .gitignore  CMakeLists.txt  Makefile  README.md  compressor.c  compressor.h  files.c  files.h  input.txt  input2.txt  main.c
tests/: compressing.c  file_reading.c  pzip_test.c  test_input.txt
